[gd_scene load_steps=3 format=3 uid="uid://cd16fhamhjrud"]

[ext_resource type="Script" path="res://interface/products_menu/products_menu.gd" id="1_s6ymk"]
[ext_resource type="PackedScene" uid="uid://kdu5blii012n" path="res://interface/element/element.tscn" id="2_cuh3k"]

[node name="MC" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_s6ymk")

[node name="PC" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="PC"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PC/MC"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PC/MC/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PC/MC/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Discount"

[node name="min_discount" type="HScrollBar" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 10)
layout_mode = 2
size_flags_vertical = 2
step = 1.0

[node name="discount_label" type="Label" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0%-100%"
horizontal_alignment = 1

[node name="max_discount" type="HScrollBar" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 10)
layout_mode = 2
size_flags_vertical = 2
step = 1.0
value = 100.0

[node name="MarginContainer2" type="MarginContainer" parent="PC/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="PC/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="sort_by" type="OptionButton" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Name"
popup/item_0/id = 0
popup/item_1/text = "Price"
popup/item_1/id = 1
popup/item_2/text = "Discount"
popup/item_2/id = 2

[node name="sort_how" type="OptionButton" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Ascending"
popup/item_0/id = 0
popup/item_1/text = "Descending"
popup/item_1/id = 1

[node name="search_text" type="LineEdit" parent="PC/MC/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 21
clear_button_enabled = true

[node name="MarginContainer3" type="MarginContainer" parent="PC/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="PC/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="status_lable" type="Label" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Status: ok"

[node name="count_lable" type="Label" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Status: ok"

[node name="error_lable" type="Label" parent="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PC/MC/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="SC" type="ScrollContainer" parent="PC/MC/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="elements_list" type="VBoxContainer" parent="PC/MC/VBoxContainer/SC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="element" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element3" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element4" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element5" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element6" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element7" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element8" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element2" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="element9" parent="PC/MC/VBoxContainer/SC/elements_list" instance=ExtResource("2_cuh3k")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PC/MC/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="back" type="Button" parent="PC/MC/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="gui_input" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/min_discount" to="." method="_on_discount_gui_input"]
[connection signal="scrolling" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/min_discount" to="." method="_on_min_discount_scrolling"]
[connection signal="value_changed" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/min_discount" to="." method="_on_discount_value_changed"]
[connection signal="gui_input" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/max_discount" to="." method="_on_discount_gui_input"]
[connection signal="scrolling" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/max_discount" to="." method="_on_max_discount_scrolling"]
[connection signal="value_changed" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer/max_discount" to="." method="_on_discount_value_changed"]
[connection signal="button_down" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2/sort_by" to="." method="_on_sort_button_down"]
[connection signal="item_selected" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2/sort_by" to="." method="_execute_load"]
[connection signal="button_down" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2/sort_how" to="." method="_on_sort_button_down"]
[connection signal="item_focused" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2/sort_how" to="." method="_on_sort_item_focused"]
[connection signal="item_selected" from="PC/MC/VBoxContainer/HBoxContainer/VBoxContainer2/sort_how" to="." method="_execute_load"]
[connection signal="text_changed" from="PC/MC/VBoxContainer/HBoxContainer/search_text" to="." method="_on_search_text_text_changed"]
[connection signal="text_submitted" from="PC/MC/VBoxContainer/HBoxContainer/search_text" to="." method="_on_search_text_text_submitted"]
[connection signal="pressed" from="PC/MC/VBoxContainer/back" to="." method="_on_back_pressed"]
